--- a/index.html
+++ b/index.html
@@ -1,47 +1,245 @@
-<!doctype html>
-<html lang="ar" dir="rtl">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>الغرفة — BUBBLES</title>
-  <meta name="description" content="HTML e-book viewer (page-faithful) for الغرفة." />
-  <link rel="icon" href="assets/logo.png" />
-  <link rel="stylesheet" href="assets/style.css" />
-</head>
-<body>
-  <header class="header" dir="ltr">
-    <div class="brand">
-      <img src="assets/logo.png" alt="Bubbles logo" />
-      <div class="titles">
-        <div class="ar" dir="rtl">الغرفة</div>
-        <div class="en">BUBBLES</div>
-      </div>
-    </div>
+:root{
+  --lavender:#d09feb;
+  --cream:#fbf7ec;
+  --pink:#f6b6bc;
+  --teal:#6cc7c5;
+  --navy:#3a455a;
 
-    <div class="controls">
-      <button class="btn" id="prevBtn" aria-label="Previous page">◀</button>
-      <div class="counter" id="counter">1 / 7</div>
-      <button class="btn" id="nextBtn" aria-label="Next page">▶</button>
-    </div>
-  </header>
+  --shadow: 0 18px 40px rgba(58,69,90,.12);
+}
 
-  <main class="main">
-    <aside class="sidebar" dir="rtl">
-      <h2>الفهرس / الصفحات</h2>
-      <div class="thumbs" id="thumbs"></div>
-    </aside>
+*{ box-sizing:border-box; }
+html,body{ height:100%; }
 
-    <section class="viewer" dir="ltr">
-      <div class="stage">
-        <img id="pageImg" src="" alt="" />
-      </div>
-    </section>
-  </main>
+body{
+  margin:0;
+  font-family:system-ui,-apple-system,"Segoe UI",Arial,"Noto Sans Arabic","Noto Kufi Arabic",sans-serif;
+  background: linear-gradient(180deg, var(--lavender), color-mix(in srgb, var(--lavender) 35%, var(--cream) 65%));
+  color:var(--navy);
+}
 
-  <footer class="footer" dir="rtl">
-    <div>اختصارات لوحة المفاتيح: السهم الأيسر/الأيمن للتنقل بين الصفحات.</div>
-  </footer>
+/* Header */
+.header{
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  gap:16px;
+  padding:12px 16px;
+  background:rgba(251,247,236,.92);
+  backdrop-filter: blur(10px);
+  border-bottom:2px solid color-mix(in srgb, var(--pink) 60%, var(--cream) 40%);
+  position:sticky;
+  top:0;
+  z-index:10;
+}
 
-  <script src="assets/app.js"></script>
-</body>
-</html>
+.brand{ display:flex; align-items:center; gap:12px; }
+.brand img{ width:52px; height:52px; object-fit:contain; }
+
+.titles{ line-height:1.1; }
+.titles .ar{ font-weight:900; font-size:18px; direction:rtl; }
+.titles .en{ font-weight:800; font-size:12px; letter-spacing:2px; opacity:.85; }
+
+.controls{ display:flex; align-items:center; gap:10px; }
+
+/* Buttons */
+.btn{
+  appearance:none;
+  border:2px solid color-mix(in srgb, var(--teal) 65%, var(--cream) 35%);
+  background:#fff;
+  color:var(--navy);
+  padding:10px 12px;
+  border-radius:14px;
+  cursor:pointer;
+  font-weight:800;
+  transition: transform .12s ease, border-color .12s ease;
+}
+
+.btn:hover{
+  border-color: color-mix(in srgb, var(--teal) 85%, var(--cream) 15%);
+  transform: translateY(-1px);
+}
+
+.btn:disabled{ opacity:.45; cursor:not-allowed; transform:none; }
+
+.btn.small{ padding:8px 10px; border-radius:12px; }
+
+.counter{
+  padding:8px 10px;
+  border-radius:14px;
+  border:2px solid color-mix(in srgb, var(--pink) 65%, var(--cream) 35%);
+  background:rgba(255,255,255,.85);
+  font-weight:900;
+}
+
+.counter.small{ padding:6px 10px; border-radius:12px; }
+
+/* Layout */
+.main{
+  padding:18px 14px 26px;
+  display:grid;
+  grid-template-columns: 280px 1fr;
+  gap:16px;
+  max-width:1320px;
+  margin:0 auto;
+}
+
+@media (max-width:980px){
+  .main{ grid-template-columns:1fr; }
+}
+
+/* Sidebar */
+.sidebar{
+  background:rgba(251,247,236,.88);
+  border:2px solid rgba(58,69,90,.10);
+  border-radius:18px;
+  padding:12px;
+  box-shadow: var(--shadow);
+  height: fit-content;
+}
+
+.sidebar h2{
+  margin:6px 8px 10px;
+  font-size:14px;
+  letter-spacing:.3px;
+}
+
+.sidebar-actions{
+  display:flex;
+  flex-wrap:wrap;
+  gap:8px;
+  padding: 0 8px 10px;
+}
+
+.ghost{
+  appearance:none;
+  border:2px solid rgba(58,69,90,.12);
+  background: rgba(255,255,255,.6);
+  color: var(--navy);
+  padding:8px 10px;
+  border-radius: 14px;
+  cursor:pointer;
+  font-weight:800;
+  transition: transform .12s ease, border-color .12s ease;
+}
+.ghost:hover{
+  border-color: rgba(58,69,90,.22);
+  transform: translateY(-1px);
+}
+
+/* Thumbnails grid */
+.thumbs{
+  display:grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap:10px;
+}
+
+.thumb{
+  border-radius:12px;
+  overflow:hidden;
+  border:3px solid transparent;
+  cursor:pointer;
+  background:#fff;
+  outline:none;
+}
+
+.thumb.active{
+  border-color: color-mix(in srgb, var(--teal) 85%, #fff 15%);
+}
+
+.thumb img{
+  width:100%;
+  height:120px;
+  object-fit:cover;
+  display:block;
+}
+
+/* Viewer */
+.viewer{
+  background:rgba(251,247,236,.78);
+  border:2px solid rgba(58,69,90,.10);
+  border-radius:18px;
+  padding:12px;
+  box-shadow: var(--shadow);
+}
+
+.stage{
+  border-radius:14px;
+  overflow:auto;
+  background:#fff;
+  border:3px solid color-mix(in srgb, var(--pink) 45%, #fff 55%);
+  padding: 12px 8px 18px;
+  max-height: calc(100vh - 190px);
+}
+
+/* Fit modes */
+.stage.fit-width img{
+  width:100%;
+  height:auto;
+  display:block;
+}
+
+.stage.fit-page{
+  display:flex;
+  align-items:flex-start;
+  justify-content:center;
+}
+
+.stage.fit-page img{
+  width:auto;
+  max-width:100%;
+  height:auto;
+  display:block;
+}
+
+/* Zoom transforms apply on the img */
+.stage img{
+  display:block;
+  margin: 0 auto;
+}
+
+/* Viewer bottom bar */
+.viewer-bar{
+  margin-top: 12px;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  gap:10px;
+  flex-wrap:wrap;
+}
+
+.hint{
+  font-weight:800;
+  opacity:.85;
+  display:flex;
+  align-items:center;
+  gap:8px;
+}
+
+.sep{ opacity:.4; padding: 0 2px; }
+
+.kbd{
+  display:inline-block;
+  padding: 2px 8px;
+  border-radius: 10px;
+  border: 2px solid rgba(58,69,90,.12);
+  background: rgba(255,255,255,.75);
+  font-weight: 900;
+}
+
+/* Footer */
+.footer{
+  padding:10px 16px 18px;
+  max-width:1320px;
+  margin:0 auto;
+  opacity:.8;
+  font-size:12px;
+}
+
+/* Hide thumbs (toggle) */
+body.thumbs-hidden .sidebar{
+  display:none;
+}
+body.thumbs-hidden .main{
+  grid-template-columns: 1fr;
+}
