--- a/index.html
+++ b/index.html
@@ -1,252 +1,19 @@
 <!doctype html>
-<html lang="ar" dir="rtl">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>الغرفة — BUBBLES</title>
+  <title>Opening…</title>
 
-  <meta name="description" content="Bubbles in Arabic — HTML e-book viewer" />
-  <link rel="icon" href="logo.png" />
+  <!-- Instant redirect -->
+  <meta http-equiv="refresh" content="0; url=the-room/" />
 
-  <!-- ===================== -->
-  <!-- EMBEDDED CSS (STYLE)  -->
-  <!-- ===================== -->
-  <style>
-    :root{
-      --lavender:#d09feb;
-      --cream:#fbf7ec;
-      --pink:#f6b6bc;
-      --teal:#6cc7c5;
-      --navy:#3a455a;
-      --shadow:0 18px 40px rgba(58,69,90,.12);
-    }
-
-    *{box-sizing:border-box}
-    html,body{height:100%}
-
-    body{
-      margin:0;
-      font-family:system-ui,-apple-system,"Segoe UI",Arial,"Noto Sans Arabic","Noto Kufi Arabic",sans-serif;
-      background:linear-gradient(180deg,var(--lavender),color-mix(in srgb,var(--lavender) 35%,var(--cream) 65%));
-      color:var(--navy);
-    }
-
-    /* Header */
-    .header{
-      display:flex;align-items:center;justify-content:space-between;gap:16px;
-      padding:12px 16px;
-      background:rgba(251,247,236,.92);
-      backdrop-filter:blur(10px);
-      border-bottom:2px solid color-mix(in srgb,var(--pink) 60%,var(--cream) 40%);
-      position:sticky;top:0;z-index:10;
-    }
-
-    .brand{display:flex;align-items:center;gap:12px}
-    .brand img{width:52px;height:52px;object-fit:contain}
-    .titles{line-height:1.1}
-    .titles .ar{font-weight:900;font-size:18px;direction:rtl}
-    .titles .en{font-weight:800;font-size:12px;letter-spacing:2px;opacity:.85}
-
-    .controls{display:flex;align-items:center;gap:10px}
-
-    /* Buttons */
-    .btn{
-      appearance:none;
-      border:2px solid color-mix(in srgb,var(--teal) 65%,var(--cream) 35%);
-      background:#fff;color:var(--navy);
-      padding:10px 12px;border-radius:14px;
-      cursor:pointer;font-weight:800;
-      transition:.12s;
-    }
-    .btn:hover{transform:translateY(-1px)}
-    .btn:disabled{opacity:.45;cursor:not-allowed}
-
-    .counter{
-      padding:8px 10px;border-radius:14px;
-      border:2px solid color-mix(in srgb,var(--pink) 65%,var(--cream) 35%);
-      background:rgba(255,255,255,.85);
-      font-weight:900;
-    }
-
-    /* Layout */
-    .main{
-      padding:18px 14px 26px;
-      display:grid;
-      grid-template-columns:280px 1fr;
-      gap:16px;
-      max-width:1320px;
-      margin:0 auto;
-    }
-
-    @media(max-width:980px){
-      .main{grid-template-columns:1fr}
-    }
-
-    /* Sidebar */
-    .sidebar{
-      background:rgba(251,247,236,.88);
-      border:2px solid rgba(58,69,90,.10);
-      border-radius:18px;
-      padding:12px;
-      box-shadow:var(--shadow);
-    }
-
-    .sidebar h2{margin:6px 8px 10px;font-size:14px}
-
-    .thumbs{
-      display:grid;
-      grid-template-columns:repeat(2,1fr);
-      gap:10px;
-    }
-
-    .thumb{
-      border-radius:12px;
-      overflow:hidden;
-      border:3px solid transparent;
-      cursor:pointer;
-      background:#fff;
-    }
-    .thumb.active{
-      border-color:color-mix(in srgb,var(--teal) 85%,#fff 15%);
-    }
-    .thumb img{
-      width:100%;
-      height:120px;
-      object-fit:cover;
-      display:block;
-    }
-
-    /* Viewer */
-    .viewer{
-      background:rgba(251,247,236,.78);
-      border:2px solid rgba(58,69,90,.10);
-      border-radius:18px;
-      padding:12px;
-      box-shadow:var(--shadow);
-    }
-
-    .stage{
-      border-radius:14px;
-      overflow:auto;
-      background:#fff;
-      border:3px solid color-mix(in srgb,var(--pink) 45%,#fff 55%);
-      padding:12px;
-      max-height:calc(100vh - 190px);
-    }
-
-    .stage img{
-      width:100%;
-      height:auto;
-      display:block;
-    }
-
-    .footer{
-      padding:10px 16px 18px;
-      max-width:1320px;
-      margin:0 auto;
-      opacity:.8;
-      font-size:12px;
-    }
-  </style>
+  <!-- JS fallback -->
+  <script>
+    window.location.replace("the-room/");
+  </script>
 </head>
-
 <body>
-
-<header class="header" dir="ltr">
-  <div class="brand">
-    <img src="logo.png" alt="Bubbles logo">
-    <div class="titles">
-      <div class="ar" dir="rtl">الغرفة</div>
-      <div class="en">BUBBLES</div>
-    </div>
-  </div>
-
-  <div class="controls">
-    <button class="btn" id="prevBtn">◀</button>
-    <div class="counter" id="counter">1 / 1</div>
-    <button class="btn" id="nextBtn">▶</button>
-  </div>
-</header>
-
-<main class="main">
-  <aside class="sidebar" dir="rtl">
-    <h2>الفهرس / الصفحات</h2>
-    <div class="thumbs" id="thumbs"></div>
-  </aside>
-
-  <section class="viewer" dir="ltr">
-    <div class="stage">
-      <img id="pageImg" src="" alt="">
-    </div>
-  </section>
-</main>
-
-<footer class="footer" dir="rtl">
-  هذا الكتاب معروض بصيغة HTML محافظة على تصميم صفحات PDF الأصلية.
-</footer>
-
-<!-- ===================== -->
-<!-- EMBEDDED JAVASCRIPT  -->
-<!-- ===================== -->
-<script>
-  const PAGES = [
-    "page-01.png",
-    "page-02.png",
-    "page-03.png",
-    "page-04.png",
-    "page-05.png",
-    "page-06.png",
-    "page-07.png"
-  ];
-
-  let current = 0;
-
-  const img = document.getElementById("pageImg");
-  const counter = document.getElementById("counter");
-  const prevBtn = document.getElementById("prevBtn");
-  const nextBtn = document.getElementById("nextBtn");
-  const thumbs = document.getElementById("thumbs");
-
-  function setPage(i){
-    current = Math.max(0, Math.min(PAGES.length - 1, i));
-    img.src = PAGES[current];
-    counter.textContent = (current + 1) + " / " + PAGES.length;
-    prevBtn.disabled = current === 0;
-    nextBtn.disabled = current === PAGES.length - 1;
-
-    document.querySelectorAll(".thumb").forEach((t,idx)=>{
-      t.classList.toggle("active", idx === current);
-    });
-
-    const url = new URL(window.location);
-    url.searchParams.set("p", current + 1);
-    history.replaceState(null,"",url);
-  }
-
-  function buildThumbs(){
-    PAGES.forEach((p,i)=>{
-      const d = document.createElement("div");
-      d.className = "thumb";
-      const im = document.createElement("img");
-      im.src = p;
-      d.appendChild(im);
-      d.onclick = ()=>setPage(i);
-      thumbs.appendChild(d);
-    });
-  }
-
-  prevBtn.onclick = ()=>setPage(current - 1);
-  nextBtn.onclick = ()=>setPage(current + 1);
-
-  window.onkeydown = e=>{
-    if(e.key==="ArrowLeft") setPage(current - 1);
-    if(e.key==="ArrowRight") setPage(current + 1);
-  };
-
-  const q = parseInt(new URL(window.location).searchParams.get("p") || "1");
-  buildThumbs();
-  setPage(q - 1);
-</script>
-
+  <p>Opening the e-book… If nothing happens, <a href="the-room/">click here</a>.</p>
 </body>
 </html>
