--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Opening…</title>
 
-  <!-- Instant redirect -->
+  <title>Bubbles eBooks</title>
+
+  <!-- Auto-open the book -->
   <meta http-equiv="refresh" content="0; url=the-room/" />
-
-  <!-- JS fallback -->
   <script>
     window.location.replace("the-room/");
   </script>
 </head>
+
 <body>
-  <p>Opening the e-book… If nothing happens, <a href="the-room/">click here</a>.</p>
+  <p>
+    Opening the book…
+    <a href="the-room/">Click here if nothing happens</a>
+  </p>
 </body>
 </html>
