--- a/the-room/index.html
+++ b/the-room/index.html
@@ -1,1 +1,283 @@
+<!doctype html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>الغرفة — BUBBLES</title>
 
+  <meta name="description" content="Bubbles in Arabic – The Room (Interactive HTML e-Book)">
+  <link rel="icon" href="logo.png">
+
+  <style>
+    :root{
+      --lavender:#d09feb;
+      --cream:#fbf7ec;
+      --pink:#f6b6bc;
+      --teal:#6cc7c5;
+      --navy:#3a455a;
+      --shadow:0 18px 40px rgba(58,69,90,.12);
+    }
+
+    *{box-sizing:border-box}
+    html,body{height:100%}
+
+    body{
+      margin:0;
+      font-family:system-ui,-apple-system,"Segoe UI",Arial,"Noto Sans Arabic","Noto Kufi Arabic",sans-serif;
+      background:linear-gradient(180deg,var(--lavender),color-mix(in srgb,var(--lavender) 35%,var(--cream) 65%));
+      color:var(--navy);
+    }
+
+    /* Header */
+    header{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:16px;
+      padding:12px 16px;
+      background:rgba(251,247,236,.92);
+      backdrop-filter:blur(10px);
+      border-bottom:2px solid color-mix(in srgb,var(--pink) 60%,var(--cream) 40%);
+      position:sticky;
+      top:0;
+      z-index:10;
+    }
+
+    .brand{
+      display:flex;
+      align-items:center;
+      gap:12px;
+    }
+    .brand img{
+      width:52px;
+      height:52px;
+      object-fit:contain;
+    }
+    .titles{
+      line-height:1.1;
+    }
+    .titles .ar{
+      font-weight:900;
+      font-size:18px;
+    }
+    .titles .en{
+      font-weight:800;
+      font-size:12px;
+      letter-spacing:2px;
+      opacity:.85;
+      direction:ltr;
+    }
+
+    .controls{
+      display:flex;
+      align-items:center;
+      gap:10px;
+    }
+
+    button{
+      appearance:none;
+      border:2px solid color-mix(in srgb,var(--teal) 65%,var(--cream) 35%);
+      background:#fff;
+      color:var(--navy);
+      padding:10px 12px;
+      border-radius:14px;
+      font-weight:900;
+      cursor:pointer;
+    }
+    button:disabled{
+      opacity:.45;
+      cursor:not-allowed;
+    }
+
+    .counter{
+      padding:8px 10px;
+      border-radius:14px;
+      border:2px solid color-mix(in srgb,var(--pink) 65%,var(--cream) 35%);
+      background:rgba(255,255,255,.85);
+      font-weight:900;
+    }
+
+    /* Layout */
+    main{
+      max-width:1320px;
+      margin:18px auto 26px;
+      padding:0 14px;
+      display:grid;
+      grid-template-columns:280px 1fr;
+      gap:16px;
+    }
+
+    @media(max-width:980px){
+      main{grid-template-columns:1fr}
+    }
+
+    /* Sidebar */
+    aside{
+      background:rgba(251,247,236,.88);
+      border:2px solid rgba(58,69,90,.10);
+      border-radius:18px;
+      padding:12px;
+      box-shadow:var(--shadow);
+      height:fit-content;
+    }
+
+    aside h2{
+      margin:6px 8px 10px;
+      font-size:14px;
+    }
+
+    .thumbs{
+      display:grid;
+      grid-template-columns:repeat(2,1fr);
+      gap:10px;
+    }
+
+    .thumb{
+      border-radius:12px;
+      overflow:hidden;
+      border:3px solid transparent;
+      background:#fff;
+      cursor:pointer;
+    }
+
+    .thumb.active{
+      border-color:color-mix(in srgb,var(--teal) 85%,#fff 15%);
+    }
+
+    .thumb img{
+      width:100%;
+      height:120px;
+      object-fit:cover;
+      display:block;
+    }
+
+    /* Viewer */
+    .viewer{
+      background:rgba(251,247,236,.78);
+      border:2px solid rgba(58,69,90,.10);
+      border-radius:18px;
+      padding:12px;
+      box-shadow:var(--shadow);
+    }
+
+    .stage{
+      background:#fff;
+      border-radius:14px;
+      border:3px solid color-mix(in srgb,var(--pink) 45%,#fff 55%);
+      overflow:auto;
+      max-height:calc(100vh - 190px);
+    }
+
+    .stage img{
+      width:100%;
+      height:auto;
+      display:block;
+    }
+
+    footer{
+      max-width:1320px;
+      margin:0 auto 18px;
+      padding:0 14px;
+      font-size:12px;
+      opacity:.75;
+    }
+  </style>
+</head>
+
+<body>
+
+<header dir="ltr">
+  <div class="brand">
+    <img src="logo.png" alt="Bubbles logo">
+    <div class="titles">
+      <div class="ar" dir="rtl">الغرفة</div>
+      <div class="en">BUBBLES</div>
+    </div>
+  </div>
+
+  <div class="controls">
+    <button id="prevBtn">◀</button>
+    <div class="counter" id="counter">1 / 7</div>
+    <button id="nextBtn">▶</button>
+  </div>
+</header>
+
+<main>
+  <aside dir="rtl">
+    <h2>الصفحات</h2>
+    <div class="thumbs" id="thumbs"></div>
+  </aside>
+
+  <section class="viewer">
+    <div class="stage">
+      <img id="pageImg" src="" alt="">
+    </div>
+  </section>
+</main>
+
+<footer dir="rtl">
+  كتاب تفاعلي بصيغة HTML — يحافظ على تصميم صفحات الكتاب الأصلي.
+</footer>
+
+<script>
+  const PAGES = [
+    "page-01.png",
+    "page-02.png",
+    "page-03.png",
+    "page-04.png",
+    "page-05.png",
+    "page-06.png",
+    "page-07.png"
+  ];
+
+  let current = 0;
+
+  const img = document.getElementById("pageImg");
+  const counter = document.getElementById("counter");
+  const prevBtn = document.getElementById("prevBtn");
+  const nextBtn = document.getElementById("nextBtn");
+  const thumbs = document.getElementById("thumbs");
+
+  function showPage(i){
+    current = Math.max(0, Math.min(PAGES.length - 1, i));
+    img.src = PAGES[current];
+    counter.textContent = (current + 1) + " / " + PAGES.length;
+    prevBtn.disabled = current === 0;
+    nextBtn.disabled = current === PAGES.length - 1;
+
+    document.querySelectorAll(".thumb").forEach((t,idx)=>{
+      t.classList.toggle("active", idx === current);
+    });
+
+    const u = new URL(window.location);
+    u.searchParams.set("p", current + 1);
+    history.replaceState(null,"",u);
+  }
+
+  function buildThumbs(){
+    PAGES.forEach((p,i)=>{
+      const d = document.createElement("div");
+      d.className = "thumb";
+      const im = document.createElement("img");
+      im.src = p;
+      d.appendChild(im);
+      d.onclick = ()=>showPage(i);
+      thumbs.appendChild(d);
+    });
+  }
+
+  prevBtn.onclick = ()=>showPage(current - 1);
+  nextBtn.onclick = ()=>showPage(current + 1);
+
+  window.onkeydown = e=>{
+    if(e.key === "ArrowLeft") showPage(current - 1);
+    if(e.key === "ArrowRight") showPage(current + 1);
+  };
+
+  const start = parseInt(new URL(window.location).searchParams.get("p") || "1");
+  buildThumbs();
+  showPage(start - 1);
+</script>
+
+</body>
+</html>
