--- a/index.html
+++ b/index.html
@@ -3,20 +3,18 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
   <title>Bubbles eBooks</title>
 
-  <!-- Auto-open the book -->
-  <meta http-equiv="refresh" content="0; url=the-room/" />
+  <!-- IMPORTANT: use ./ so it stays inside the repo path -->
+  <meta http-equiv="refresh" content="0; url=./the-room/" />
   <script>
-    window.location.replace("the-room/");
+    window.location.replace("./the-room/");
   </script>
 </head>
-
 <body>
   <p>
     Opening the book…
-    <a href="the-room/">Click here if nothing happens</a>
+    <a href="./the-room/">Click here if nothing happens</a>
   </p>
 </body>
 </html>
