--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bubbles eBooks</title>
 
-  <!-- IMPORTANT: use ./ so it stays inside the repo path -->
-  <meta http-equiv="refresh" content="0; url=./the-room/" />
+  <!-- Always stay inside the repo path -->
+  <meta http-equiv="refresh" content="0; url=./the-room/">
+
   <script>
-    window.location.replace("./the-room/");
+    window.location.href = "./the-room/";
   </script>
 </head>
+
 <body>
   <p>
     Opening the book…
-    <a href="./the-room/">Click here if nothing happens</a>
+    <a href="./the-room/">Click here if it does not open</a>
   </p>
 </body>
 </html>
